# dockerever

./: .gitignore  README.md  deploy.sh
backend/: Dockerfile  entrypoint.sh  pre_start.py  pyproject.toml  setup.cfg  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0098d638edaf_change_role_model.py  034b687f24e1_add_cascade_delete_for_token_pairs.py  1f97df362c09_init_users_table.py  26c9376398b4_add_cascade_delete_for_user.py  2a901b38d26c_add_dashboards.py  6fabfbdea0d3_add_cascade_delete_for_user.py  a1efdd803428_add_dashboards.py  a6b82beef8cc_update_dashboards.py  c6847c873033_add_user_roles.py  dfb078753894_add_must_change_password_field_for_.py  fa170f41fb74_update_dashboards_and_blocks.py
backend/src/: config.py  database.py  init_data.py  main.py
backend/src/api/api_v1/: api.py
backend/src/api/api_v1/routers/: auth.py  dashboard_blocks.py  dashboards.py  (+7 more)
backend/src/auth/: models.py  router.py  schemas.py  utils.py
backend/src/auth/services/: auth_service.py
backend/src/constants/: roles.py
backend/src/datasources/: __init__.py  base.py  dashboard.py  dashboard_block.py  docker.py  prometheus.py  role.py  token_pair.py  user.py  user_role.py
backend/src/db/: base.py  database.py  init_db.py
backend/src/errors/: errors.json  exceptions.py
backend/src/metrics/: router.py
backend/src/models/: dashboard.py  role.py  token_pair.py  user.py  user_role.py
backend/src/schemas/: __init__.py  core_message.py  dashboard.py  node.py  role.py  token.py  user.py  user_role.py
backend/src/services/: auth.py  dashboard.py  dashboard_block.py  nodes.py  roles.py  user.py  user_roles.py
backend/src/utils/: expired_tokens.py  jwthandler.py  security.py
(+54 files in other folders)
